--- a/.github/workflows/build-openwrt-with-imagebuilder.yml
+++ b/.github/workflows/build-openwrt-with-imagebuilder.yml
@@ -27,7 +27,7 @@ on:
       openwrt_board:
         description: "Select device board"
         required: false
-        default: "all"
+        default: "s905x2"
         type: choice
         options:
           - all
@@ -191,6 +191,7 @@ on:
           - 6.6.y
           - 6.1.y_6.6.y
           - 5.15.y_5.10.y
+          - 6.12.y
       auto_kernel:
         description: "Auto use the latest kernel"
         required: false
@@ -203,6 +204,7 @@ on:
         type: choice
         options:
           - ophub/kernel
+          - yhpgi/kernel
       kernel_usage:
         description: "Set the tags of the stable kernel."
         required: false
@@ -221,7 +223,7 @@ on:
         options:
           - ophub
           - angel
-          - yourname
+          - yhpgi
 
 env:
   TZ: America/New_York
@@ -293,12 +295,12 @@ jobs:
           rm -rf $(ls . | grep -v "^bin$" | xargs) 2>/dev/null
 
           [[ -d "/builder/openwrt" ]] || mkdir -p /builder/openwrt
-          ln -sf /builder/openwrt /home/runner/work/_actions/ophub/amlogic-s9xxx-openwrt/main/openwrt
+          ln -sf /builder/openwrt /home/runner/work/_actions/yhpgi/amlogic-s9xxx-openwrt/main/openwrt
           df -hT ${PWD}
 
       - name: Packaging OpenWrt
         if: ${{ steps.imagebuilder.outputs.status }} == 'success' && !cancelled()
-        uses: ophub/amlogic-s9xxx-openwrt@main
+        uses: yhpgi/amlogic-s9xxx-openwrt@main
         with:
           openwrt_path: imagebuilder/bin/targets/*/*/*rootfs.tar.gz
           openwrt_board: ${{ inputs.openwrt_board }}
